# multi-agent-essay

./: .gitignore  CLAUDE.md  LICENSE  README.md  flow.py  main.py  pyproject.toml
agents/: outliner.py  researcher.py  reviewer.py  topic_advisor.py  writer.py
config/: llm.py
crews/: outline_crew.py  research_crew.py  review_crew.py  topic_crew.py  writing_crew.py
tools/: file_tool.py  search_tool.py
